--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,21 +5,61 @@
 }
 
 input {
-    font-size: x-large;
     text-align: center;
 }
 
+.form input {
+    font-size: large;
+    /* width: 70%; */
+    margin: 0;
+    /* margin-right: 30%;     */
+}
+
+#mainInput {
+    font-size: xxx-large;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .row {
-    padding: 20% 0;
+    padding: 10% 0;
 }
 
 
 button {
     background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
+    cursor: pointer;
+}
+
+body {
     font-family: Arial, Helvetica, sans-serif;
-    border: none;
-    border-radius: 3px;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 36px;
+}
+
+#controls {
+    display: grid;
+    grid-template-columns: 60% 15% 20%;
+}
+
+select {
+    font-size: large;
+    font-weight: bolder;
+}
+
+.form {
+    display: grid;
+    align-items: stretch;
+    font-size: large;
+}
+
+.up_down_margin {
+    margin: 5px 0;
+}
+
+div p {
+    margin: 0
 }
