--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,65 +1,73 @@
 .container {
-    display: grid;
-    padding-top: 5%;
-    justify-content: center;
+  display: grid;
+  padding-top: 5%;
+  justify-content: center;
 }
 
 input {
-    text-align: center;
+  text-align: center;
 }
 
 .form input {
-    font-size: large;
-    /* width: 70%; */
-    margin: 0;
-    /* margin-right: 30%;     */
+  font-size: large;
+  /* width: 70%; */
+  margin: 0;
+  /* margin-right: 30%;     */
 }
 
 #mainInput {
-    font-size: xxx-large;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+  font-size: xxx-large;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .row {
-    padding: 10% 0;
+  padding: 10% 0;
 }
 
-
 button {
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-    height: 100%;
-    margin-top: auto;
-    margin-bottom: auto;
-    cursor: pointer;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+  cursor: pointer;
+}
+
+.defaults button {
+  height: 25%;
+}
+
+.defaults p {
+  height: 25%;
+  text-align: center;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #controls {
-    display: grid;
-    grid-template-columns: 60% 15% 20%;
+  display: grid;
+  grid-template-columns: 55% 30% 15%;
 }
 
 select {
-    font-size: large;
-    font-weight: bolder;
+  font-size: large;
+  font-weight: bolder;
 }
 
 .form {
-    display: grid;
-    align-items: stretch;
-    font-size: large;
+  display: grid;
+  align-items: stretch;
+  font-size: large;
 }
 
 .up_down_margin {
-    margin: 5px 0;
+  margin: 5px 0;
 }
 
 div p {
-    margin: 0
+  margin: 0;
 }
