--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,14 +80,13 @@
       </label>
     </form>
     <div class="defaults">
-      <!-- <p>Default Values</p> -->
       <label>
-          Circular Arrows
-          <input type="checkbox" [(ngModel)]="circularArrows"/>
+          <!-- Circular Arrows
+          <input type="checkbox" [(ngModel)]="circularArrows"/> -->
       </label>
       <button (click)="defaultDateFormat()">day-month-year</button>
       <button (click)="defaultTimeFormat()">hour:minute:seconds</button>
-      <button (click)="defaultDateTimeFormat()">hh-MM-yyyy hh:mm:ss</button>
+      <button (click)="defaultDateTimeFormat()">dd-MM-yyyy hh:mm:ss</button>
     </div>
     <button (click)="format()">Format !!!</button>
   </div>
