--- a/projects/ng-date-mask-showcase/src/app/app.component.html
+++ b/projects/ng-date-mask-showcase/src/app/app.component.html
@@ -98,6 +98,6 @@
         <input type="checkbox" [(ngModel)]="noInitialValue" />
       </label>
     </div>
-    <button class="format-button" (click)="format()">Format !!!</button>
+    <button class="format-button" (click)="format()">Format !!</button>
   </div>
 </div>
